add full docs folder with assets

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     >
     <link
       rel="stylesheet"
-      href="./styles/styles.css"
+      href="styles/styles.css"
     />
     <link rel="stylesheet" href="./libs/youtubeLightbox/youtubeLightbox.css">
 </head>
@@ -26,7 +26,7 @@
                       href="#!"
                       class="top-bar__logo-link"
                       >
-                        <img src="./images/logo.png" alt="DominoEstate"
+                        <img src="images/logo.png" alt="DominoEstate"
                           class="top-bar__logo"
                         >
                     </a>
@@ -35,9 +35,9 @@
                         <nav class="nav">
                             <ul class="nav__list">
                                 <li><a href="#about-complex">About the Complex</a></li>
-                                <li><a href="#map">Location</a></li>
+                                <li><a href="#map-section">Location</a></li>
                                 <li><a href="#apartments-catalog">Apartments Catalog</a></li>
-                                <li><a href="#contacts ">FAQ & Contact Section </a></li>
+                                <li><a href="#contacts">FAQ & Contact Section </a></li>
                             </ul>
                         </nav>
                     </div>
@@ -57,8 +57,7 @@
               A heritage-inspired <br>
               residential project in the city’s core
                 <a href="#about-complex">
-                    <img
-                        src="./images/header/mouse.svg"
+                    <img src="images/header/mouse.svg"
                         alt="Scroll next"
                         class="header__title-icon"
                     >
@@ -68,7 +67,7 @@
 
         <div class="header__footer">
             <div class="text-right">
-                <a href="#map" class="info info--map"> <imgsrc="./images/header/mouse.svg"
+                <a href="#map" class="info info--map"> <img src="./images/header/mouse.svg"
                   alt="Scroll next"> Shevchenka 12</a>
             </div>
             <a href="tel:+380671234567" class="info info--tel">+380 67 123 45 67</a>
@@ -89,22 +88,22 @@
                 <div class="benefits__row">
 
                     <div class="benefits__item">
-                        <img src="./images/benefits/bench.svg" alt="" class="benefits__item-img">
+                        <img src="images/benefits/bench.svg" alt="" class="benefits__item-img">
                         <p class="benefits__item-text">Located near historic parks and gardens</p>
                     </div>
 
                     <div class="benefits__item">
-                        <img src="./images/benefits/building.svg" alt="" class="benefits__item-img">
+                        <img src="images/benefits/building.svg" alt="" class="benefits__item-img">
                         <p class="benefits__item-text">Fully furnished and ready</p>
                     </div>
 
                     <div class="benefits__item">
-                        <img src="./images/benefits/fountain.svg" alt="" class="benefits__item-img">
+                        <img src="images/benefits/fountain.svg" alt="" class="benefits__item-img">
                         <p class="benefits__item-text">There are 3 playgrounds and fountains on the premises</p>
                     </div>
 
                     <div class="benefits__item">
-                        <img src="./images/benefits/bicycle.svg" alt="" class="benefits__item-img">
+                        <img src="images/benefits/bicycle.svg" alt="" class="benefits__item-img">
                         <p class="benefits__item-text">There is a cycling path for active recreation</p>
                     </div>
 
@@ -213,8 +212,8 @@
             <div class="container">
 
                 <a href="https://www.youtube.com/watch?v=IvMvWvGxY7U" data-youtubeLightbox class="video__link">
-                    <img src="./images/video/play.svg" alt="" class="video__icon">
-                    <img src="./images/video/video-img.jpg" alt="" class="video__img">
+                    <img src="images/video/play.svg" alt="" class="video__icon">
+                    <img src="images/video/video-img.jpg" alt="" class="video__img">
                 </a>
             </div>
         </section>
@@ -248,7 +247,6 @@
                 </form>
             </div>
         </section>
-
     </main>
 
     <footer class="footer none1">
@@ -256,7 +254,7 @@
             <div class="footer__grid">
                 <div class="footer__logo">
                     <a href="#!">
-                        <img src="./images/logo.png" alt="DominoEstate">
+                        <img src="images/logo.png" alt="DominoEstate">
                     </a>
                 </div>
 
@@ -285,7 +283,12 @@
         </div>
     </div>
 
-    <script src="https://www.google.com.ua/maps/place/%D0%A8%D1%83%D0%BB%D1%8F%D0%B2%D0%BA%D0%B0,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4516814,30.4617399,14z/data=!3m1!4b1!4m6!3m5!1s0x40d4cc29cbac5d45:0x5b09d85959d3a4fd!8m2!3d50.4533821!4d30.4529396!16s%2Fg%2F122kjmf2?hl=ru&entry=ttu&g_ep=EgoyMDI1MDQwMi4xIKXMDSoJLDEwMjExNDU1SAFQAw%3D%3D" type="text/javascript"></script>
+    <iframe 
+      src="https://www.google.com/maps/embed?pb=..."
+      width="100%" height="450" style="border:0;" 
+      allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
 
 
     <script src="./libs/youtubeLightbox/youtubeLightbox.js"></script>
