--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="styles/styles.css"
     />
-    <link rel="stylesheet" href="./libs/youtubeLightbox/youtubeLightbox.css">
+    <link rel="stylesheet" href="libs/youtubeLightbox/youtubeLightbox.css">
 </head>
 <body>
     <header class="header none1">
@@ -67,10 +67,11 @@
 
         <div class="header__footer">
             <div class="text-right">
-                <a href="#map" class="info info--map"> <img src="./images/header/mouse.svg"
-                  alt="Scroll next"> Shevchenka 12</a>
+                <a href="#map" class="info info--map"> <img src="images/header/map.svg"
+                  alt="Map icon"> Shevchenka 12</a>
             </div>
-            <a href="tel:+380671234567" class="info info--tel">+380 67 123 45 67</a>
+            <a href="tel:+380671234567" class="info info--tel"> <img src="images/header/phone.svg"
+              alt="Phone icon"> +380 67 123 45 67</a>
         </div>
     </header>
 
@@ -226,6 +227,12 @@
               <div class="section-map__map">
                   <div class="map" id="google-map"></div>
               </div>
+              <iframe 
+                src="https://www.google.com/maps/embed?pb=..."
+                width="100%" height="450" style="border:0;" 
+                allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+              </iframe>
           </div>
       </section>
 
@@ -266,9 +273,9 @@
                         <li>E-mail: <a class="link-bold" href="mailto:modern@dominoestate.ua">modern@dominoestate.ua</a></li>
                     </ul>
                     <ul class="footer__socials">
-                        <li><a href="#!"><img src="./images/socials/youtube.svg" alt=""></a></li>
-                        <li><a href="#!"><img src="./images/socials/facebook.svg" alt=""></a></li>
-                        <li><a href="#!"><img src="./images/socials/instagram.svg" alt=""></a></li>
+                        <li><a href="#!"><img src="images/socials/youtube.svg" alt=""></a></li>
+                        <li><a href="#!"><img src="images/socials/facebook.svg" alt=""></a></li>
+                        <li><a href="#!"><img src="images/socials/instagram.svg" alt=""></a></li>
                     </ul>
                 </div>
             </div>
@@ -283,17 +290,10 @@
         </div>
     </div>
 
-    <iframe 
-      src="https://www.google.com/maps/embed?pb=..."
-      width="100%" height="450" style="border:0;" 
-      allowfullscreen="" loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
 
+    <script src="libs/youtubeLightbox/youtubeLightbox.js"></script>
 
-    <script src="./libs/youtubeLightbox/youtubeLightbox.js"></script>
-
-    <script src="./js/main.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 </html>
