--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     >
     <link
       rel="stylesheet"
-      href="styles/styles.css"
+      href="src/styles/styles.css"
     />
     <link rel="stylesheet" href="libs/youtubeLightbox/youtubeLightbox.css">
 </head>
